# cest

./: .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.MD  sonar-project.properties
.github/: workflow.yml
.github/workflows/: main.yml
docs/: CNAME  index.html  styles.css
docs/backend/: backend.py  requirements.txt
docs/src/: api.js  event_bus.js  events.js  main.js  presentation.js
docs/test/: SpecRunner.html
docs/test/spec/: event_bus_spec.js
framework/: build.py  cest  junit.py  unittest
framework/compilation/: files.py  junit_generation.py  test_suites.py
framework/spec/: test_junit_generation.py  test_test_suites.py
framework/spec/helpers/: junit_xml_samples.py
include/: example.h
runner/: cmd-args.cpp  cmd-args.h  directory.cpp  directory.h  directory_posix.cpp  directory_win32.cpp  helpers.cpp  helpers.h  main.cpp  output.cpp  output.h  output_posix.cpp  output_win32.cpp  process.cpp  process.h  process_posix.cpp  process_win32.cpp  runner.cpp  runner.h  terminal.h  terminal_posix.cpp  terminal_win32.cpp  test-results.hpp  watch-mode.cpp  watch-mode.h
runner/test/: cmd-args.test.cpp  runner.test.cpp
runner/test/helpers/: helpers.cpp  helpers.h
scripts/: remove_duplicated_headers.py  remove_duplicated_once_blocks.py  remove_sanitizer_includes.py
spec/: spec.yml  test_assertions.cpp  test_command_line_arguments.cpp  test_description.cpp  test_example.cpp  test_greeting.cpp  test_money.cpp  test_parametrized_tests.cpp  test_roman_to_arabic_converter.cpp  test_suite_result_generation.cpp
spec/examples/: test_assertions  test_assertions.cpp  test_chatbot.cpp  test_description  test_floating_point.cpp  test_greeting  test_greeting.cpp  test_money  test_oca.cpp  test_parametrized_tests  test_roman_to_arabic_converter
spec/framework/: test_command_line_arguments  test_suite_result_generation
spec/helpers/: test_suite_report_samples.h
src/: address-sanitizer.hpp  arg-parser.hpp  example.cpp  expect.hpp  focus-test-suite.hpp  globals.hpp  json-output.hpp  json.hpp  main.hpp  output.hpp  parametrized.hpp  platform.hpp  randomized-tests.hpp  signal-handler.hpp  suite-runner.hpp  summary-file.hpp  test-builder.hpp  types.hpp
src/expect/: assertion-array.hpp  assertion-base.hpp  assertion-bitset.hpp  assertion-c-array.hpp  assertion-callable.hpp  assertion-chrono.hpp  assertion-complex.hpp  assertion-deque.hpp  assertion-double.hpp  assertion-float.hpp  assertion-list.hpp  assertion-map.hpp  assertion-multi.hpp  assertion-optional.hpp  assertion-path.hpp  assertion-set.hpp  assertion-smart-ptr.hpp  assertion-string.hpp  assertion-tuple.hpp  assertion-vector.hpp
test/examples/: test_description.cpp  test_nested_suites.cpp
test/framework/: assertions.test.cpp  bitflag-assertions.test.cpp  c-array.test.cpp  c-struct.test.cpp  callable-assertions.test.cpp  command-line-arguments.test.cpp  custom-assertions.test.cpp  custom-types.test.cpp  empty.test.cpp  floating_point.test.cpp  nested-suites.test.cpp  randomized-tests.test.cpp  std-array.test.cpp  std-bitset.test.cpp  std-chrono.test.cpp  std-complex.test.cpp  std-deque.test.cpp  std-list.test.cpp  std-map.test.cpp  std-multi.test.cpp  std-optional.test.cpp  std-path.test.cpp  std-set.test.cpp  std-smart-ptr.test.cpp  std-string-view.test.cpp  std-tuple.test.cpp  suite-skip-focus.test.cpp  test_command_line_arguments.cpp  todo.test.cpp
test/framework/helpers/: test_suite_report_samples.h
